--- a/src/templates/invoice.html
+++ b/src/templates/invoice.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="footer">
-            <p>Thank you for your business!</p>
+            <p>Thank you for your patronage!</p>
             <p>&copy; Prime Dental Clinic</p>
             <p>Local government, 104, New Ipaja/Egbeda Road, opposite prestige super-market, Alimosho, Ipaja Rd, Ipaja, Lagos 100006, Lagos</p>
             <p>Phone: 0703 070 8877</p>
