--- a/src/templates/receipt.html
+++ b/src/templates/receipt.html
@@ -112,7 +112,7 @@
 
         <div class="footer">
             <p>Thank you for choosing Prime Dental Clinic!</p>
-            <p>We appreciate your business.</p>
+            <p>we appreciate your patronage</p>
             <p class="clinic-info">
                 This is an automated email, please do not reply.
             </p>
