added owners number to receipt

--- a/src/templates/receipt.html
+++ b/src/templates/receipt.html
@@ -92,6 +92,7 @@
         <div class="footer">
             <p>Thank you for your patronage!</p>
             <p>Signature: _________________________</p>
+            <p>For any complaint, message or call the medical director on WhatsApp +234 806 690 4232</p>
         </div>
     </div>
 </body>
