--- a/src/templates/invoice.html
+++ b/src/templates/invoice.html
@@ -80,6 +80,7 @@
 
         <div class="footer">
             <p>Thank you for choosing Prime Dental Clinic!</p>
+            <p>For any complaint, message or call the medical director on WhatsApp +234 806 690 4232</p>
         </div>
     </div>
 </body>
