--- a/src/templates/reminder.html
+++ b/src/templates/reminder.html
@@ -128,6 +128,7 @@
         <div class="footer">
             <p>&copy; {{currentYear}} Prime Dental Clinic. All rights reserved.</p>
             <p><a href="mailto:{{clinicEmail}}">{{clinicEmail}}</a></p>
+            <p>For any complaint, message or call the medical director on WhatsApp +234 806 690 4232</p>
         </div>
     </div>
 </body>
